# yurets

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  settings.py  telegram_login.py
src/api/: routes.py
src/models/: __init__.py  now_playing.py
src/services/: __init__.py  now_playing.py  scheduler.py
src/static/: index.html
src/streaming/: streamer.py
src/streaming/sources/: __init__.py  base.py  local.py  telegram.py
